<resources>
    <string name="app_name">TheMovie</string>
    <string name="movie_list">Movie List</string>
    <string name="no_movie">Sorry! cannot load movie.\nPlease check your Internet connection</string>
    <string name="movie_details">Movie Details</string>
    <string name="overview">Overview</string>
    <string name="status">Status</string>
    <string name="genre">Genre</string>
    <string name="vote_average">Vote Average</string>
    <string name="homepage">Homepage</string>
</resources>